# shq-suite

./: .gitignore  CLAUDE.md  LICENSE  README.md  setup
deploy/: CLAUDE.md
deploy/assets/: asound.conf
deploy/src/: deploy.py
deploy/src/deploy/: __init__.py  base.py  config.py  dosa_deployer.py  ha_deployer.py  kiosk_deployer.py  overwatch_deployer.py
docs/: Shelly.md
docs/examples/deploy-config/app/: overwatch.yaml
docs/examples/deploy-config/deployment/: ha.yaml  kiosk.yaml  overwatch.yaml
docs/examples/ha-config/: configuration.yaml
docs/examples/nyx-config/: config.example.yaml
dosa/: CLAUDE.md  Cargo.toml  GRBLHAL_SETUP.md  README.md  build-rpi.sh  config.example.yaml
dosa/src/: cnc.rs  config.rs  door.rs  main.rs  messages.rs  websocket.rs
home-assistant/: CLAUDE.md
home-assistant/custom_components/actron_shq/: CLAUDE.md  __init__.py  api.py  climate.py  config_flow.py  const.py  coordinator.py  manifest.json  sensor.py  switch.py
home-assistant/custom_components/centurion/: __init__.py  camera.py  config_flow.py  const.py  cover.py  manifest.json  switch.py
home-assistant/custom_components/cfa_fire_ban/: CLAUDE.md  __init__.py  binary_sensor.py  const.py  coordinator.py  manifest.json  sensor.py
home-assistant/custom_components/dosa/: README.md  __init__.py  button.py  client.py  const.py  coordinator.py  cover.py  manifest.json  services.yaml
home-assistant/custom_components/overwatch/: README.md  __init__.py  client.py  const.py  manifest.json  services.yaml
home-assistant/custom_components/shq_display/: README.md  __init__.py  client.py  const.py  coordinator.py  light.py  manifest.json  number.py  sensor.py  services.yaml
nyx/: CLAUDE.md  Cargo.toml  DEPLOYMENT.md  README.md  build-rpi.sh  config.example.json
nyx/.cargo/: config.toml
nyx/src/: auto_dim.rs  cdp.rs  config.rs  display.rs  main.rs  messages.rs  touch.rs  websocket.rs
overwatch/: .gitignore  CLAUDE.md  Cargo.toml  Cross.toml  README.md  build-rpi.sh  build.rs  setup-wsl2.sh
overwatch/.cargo/: config.toml
overwatch/proto/: voice.proto
overwatch/src/: audio.rs  config.rs  main.rs  service.rs  tts.rs
shelly/: CLAUDE.md
shelly/src/: shelly.py
shelly/src/shelly/: __init__.py  actions.py  device.py  discovery.py  display.py
(+16 files in other folders)
