[package]
name = "nyx"
version = "1.0.0"
edition = "2021"

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["macros", "rt-multi-thread", "sync", "time", "fs", "io-util", "signal"] }
tokio-tungstenite = "0.21"

# WebSocket support
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Configuration
config = "0.14"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Input device handling (touch events)
evdev = "0.12"
nix = { version = "0.27", features = ["fs"] }

# Time utilities
chrono = "0.4"

# Path handling
directories = "5.0"
