[package]
name = "overwatch"
version = "0.1.0"
edition = "2021"

[dependencies]
# gRPC/Protobuf
tonic = "0.11"
prost = "0.12"
tokio = { version = "1.35", features = ["macros", "rt-multi-thread", "sync", "time"] }
tokio-stream = "0.1"

# AWS SDK
aws-config = { version = "1.1", features = ["behavior-version-latest"] }
aws-sdk-polly = "1.13"

# Configuration
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"

# Audio playback
rodio = "0.17"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Caching
sha2 = "0.10"

[build-dependencies]
tonic-build = "0.11"
